<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.extreme.marvelchallenge.presentation.ui.details.DetailsFragmentViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/black_700"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    extension="@{viewModel.characterRequestLiveData.thumbnail.extension}"
                    imagePath="@{viewModel.characterRequestLiveData.thumbnail.path}"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/content_des_character_image"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

                <ImageView
                    android:id="@+id/back_iv"
                    android:layout_width="64dp"
                    android:layout_height="42dp"
                    android:layout_gravity="start|center"
                    android:alpha=".5"
                    android:background="@drawable/end_corner_shape"
                    android:contentDescription="@string/content_des_character_back_image"
                    android:scaleType="center"
                    app:layout_collapseMode="pin"
                    app:srcCompat="@drawable/ic_back" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/character_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@{viewModel.characterRequestLiveData.name,default=`Mahmoud`}"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_collapseMode="pin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/description_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_description_title"
                    android:textColor="@color/red_200"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/character_name_tv" />

                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{viewModel.characterRequestLiveData.description,default=`Description not avilaable sorry..`}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_title_tv" />

                <TextView
                    android:id="@+id/comics_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_comics_title"
                    android:textColor="@color/red_200"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_tv" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_comics"
                    comicsResultListItems="@{viewModel.comicsRequestLiveData}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:minHeight="164dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/comics_title_tv"
                    tools:itemCount="20"
                    tools:listitem="@layout/item_character_details" />

                <TextView
                    android:id="@+id/series_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_series_title"
                    android:textColor="@color/red_200"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_comics" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_series"
                    seriesResultListItems="@{viewModel.seriesRequestLiveData}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:minHeight="164dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/series_title_tv"
                    tools:itemCount="20"
                    tools:listitem="@layout/item_character_details" />

                <TextView
                    android:id="@+id/stories_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_stories_title"
                    android:textColor="@color/red_200"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_series" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_stories"
                    storiesResultListItems="@{viewModel.storiesRequestLiveData}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:minHeight="164dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stories_title_tv"
                    tools:itemCount="20"
                    tools:listitem="@layout/item_character_details" />

                <TextView
                    android:id="@+id/events_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_events_title"
                    android:textColor="@color/red_200"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_stories" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_events"
                    eventsResultListItems="@{viewModel.eventsRequestLiveData}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/transparent"
                    android:minHeight="164dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/events_title_tv"
                    app:layout_constraintVertical_bias="0"
                    tools:itemCount="20"
                    tools:listitem="@layout/item_character_details" />

                <ProgressBar
                    android:id="@+id/progress_bar_comics"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/recycler_comics"
                    app:layout_constraintEnd_toEndOf="@+id/recycler_comics"
                    app:layout_constraintStart_toStartOf="@+id/recycler_comics"
                    app:layout_constraintTop_toTopOf="@+id/recycler_comics" />

                <ProgressBar
                    android:id="@+id/progress_bar_series"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/recycler_series"
                    app:layout_constraintEnd_toEndOf="@+id/recycler_series"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/recycler_series" />

                <ProgressBar
                    android:id="@+id/progress_bar_stories"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/recycler_stories"
                    app:layout_constraintEnd_toEndOf="@+id/recycler_stories"
                    app:layout_constraintStart_toStartOf="@+id/recycler_stories"
                    app:layout_constraintTop_toTopOf="@+id/recycler_stories" />

                <ProgressBar
                    android:id="@+id/progress_bar_events"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/recycler_events"
                    app:layout_constraintEnd_toEndOf="@+id/recycler_events"
                    app:layout_constraintStart_toStartOf="@+id/recycler_events"
                    app:layout_constraintTop_toTopOf="@+id/recycler_events" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>